[package]
name = "bloom"
version = "0.1.0"
authors = ["Edward Makhlin <me@lain.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.1"
fasthash = { git = "https://github.com/ragne/rust-fasthash/", branch = "fix-pub-export"}
rayon = "1.3.0"

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3"

[[bench]]
name = "bloom"
harness = false